# HW_10

./: pyproject.toml
hw10/: settings.py  urls.py
quotes/: forms.py  models.py  urls.py  views.py
quotes/migrations/: 0001_initial.py
quotes/templates/quotes/: author.html  index.html  quotes_list.html
users/: forms.py  urls.py  views.py
users/templates/users/: signup.html
utils/: add_quotes_to_mongo.py  authors.json
